# robot_mujoco_sim

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  ControlActions.hpp  RobotSim.hpp  planner.h  readme.md
.claude/: settings.local.json
docs/: PLANNER_INTEGRATION.md  PLANNER_USAGE.md  SPOT_PARAMS_INTEGRATION.md  SPOT_PARAMS_NOTE.md
model/boston_dynamics_spot/: scene.xml  spot.xml  spot_with_sensor.xml
model/realsense_d435i/: CHANGELOG.md  README.md
models/: README.md
models/env/: setup_train.sh
models/train/: env_load.py  rl_train.py
models/wtw/: deploy_mac.py  run_policy_jit.py
planner/: CMakeLists.txt  ToDo.md  package.xml
planner/include/: motor_crc.h
planner/include/Low_level/: BaseGait.h  BodyMover.h  FakePublisher.h  LegMover.h  StateMonitor.h  Timer.h  TrotGait.h
planner/include/Quadruped/: Joint.h  Kinematics.h  Leg.h  Link.h  Robot.h
planner/msg/: MoveLeg.msg  ParamsSet.msg
planner/src/Low_level/: BaseGait.cpp  BodyMover.cpp  FakePublisher.cpp  LegMover.cpp  StateMonitor.cpp  TrotGait.cpp  body_mover_node.cpp  fake_publisher_node.cpp  state_monitor_node.cpp  test.cpp  trot_gait_node.cpp
planner/src/Quadruped/: Joint.cpp  Leg.cpp  Link.cpp
planner/src/assets/: params.json
planner/src/scripts/: robot_gui_control.py  set_joints.py
plugins/: CMakeLists.txt  plugin_force.cc
ref/sample/: CMakeLists.txt
ref/simulate/: CMakeLists.txt
robot/boston_dynamics_spot/: CHANGELOG.md  README.md  spot_with_sensor.xml
robot/realsense_d435i/: LICENSE  d435i.xml
robot/unitree_go1/: CHANGELOG.md  LICENSE  README.md  go1.xml  scene.xml
robot/unitree_go2/: CHANGELOG.md  LICENSE  README.md  go2.xml  go2_mjx.xml  scene.xml  scene_mjx.xml
scripts/: env.sh  test_zmq.py  vla_bridge.py
simulate/: CMakeLists.txt  lodepng.cpp  lodepng.h  main.cc
src/: ControlActions.hpp  LegIndexHelper.hpp  RobotSim.cpp  RobotSim.hpp  SimulateUI.hpp  main.cpp  planner.cpp  planner.h  spot_robot_params.h  spot_robot_params.h.pch
src/dds/: ControlMsg.idl
src/dds_generated/: ControlMsg.c  ControlMsg.h
src/planner/: README.md
src/planner/include/Low_level/: BaseGait.h  BodyMover.h
src/planner/include/Quadruped/: Joint.h  Robot.h
src/planner/msg/: GaitParam.msg  JointsSet.msg
src/planner/src/Low_level/: leg_mover_node.cpp
src/planner/src/Quadruped/: Kinematics.cpp  Robot.cpp
src/planner/src/scripts/: set_params.py
tools/: CMakeLists.txt  dds_control_client.cpp
